# lakehouse-data-platform-demo

./: README.md
lakehouse_demo/: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
lakehouse_demo/.github/workflows/: ci.yml
lakehouse_demo/dashboard/: app.py
lakehouse_demo/docs/: kimball_notes.md  star_schema.md
lakehouse_demo/sql/marts/: avg_rating_by_industry.sql  premium_sum_by_city_month.sql  top_companies_by_rating_last_90_days.sql
lakehouse_demo/src/lakehouse/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  gold.py  ingest.py  mart.py  silver.py  utils.py
lakehouse_demo/tests/: test_quality.py
