[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-demo"
version = "0.1.0"
description = "Mini Lakehouse + Kimball demo pipeline with pandas and DuckDB."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "duckdb>=1.1.3,<2.0.0",
  "numpy>=1.26.4,<3.0.0",
  "pandas>=2.2.2,<3.0.0",
  "pyarrow>=16.1.0,<20.0.0",
  "tabulate>=0.9.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0,<26.0.0",
  "pytest>=8.3.3,<9.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
